# llmops_datacollection

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.zen/: config.yaml
configs/: data_collection.yaml  export_artifacts.yaml
llmops_datacollection/: __init__.py  settings.py
llmops_datacollection/application/: __init__.py
llmops_datacollection/application/crawlers/: __init__.py  base.py  dispatcher.py  github.py  linkedin.py  medium.py
llmops_datacollection/application/utils/: __init__.py  text.py
llmops_datacollection/domain/: __init__.py  base.py  documents.py  exceptions.py
llmops_datacollection/infrastructure/: __init__.py
llmops_datacollection/infrastructure/db/: mongo.py
llmops_datacollection/pipelines/: __init__.py  data_collection.py  export_artifacts.py
llmops_datacollection/steps/: __init__.py
llmops_datacollection/steps/etl/: crawl_links.py  get_or_create_user.py
llmops_datacollection/steps/export/: serialize_artifact.py  to_json.py
notebooks/: testing.ipynb
temp/: test_github_crawler.py  test_mongo.py
tests/: conftest.py  pytest.ini  test_github_crawler.py  test_medium_crawler.py
tests/integration/: test_linkedin_integration.py  test_mongodb_integration.py
tests/unit/: test_crawlers.py  test_linkedin_crawler.py  test_mongodb.py
tools/: __init__.py  run.py
