[tool.poetry]
name = "llmops-datacollection"
version = "0.1.0"
description = "Data collection module for LLMOps project"
authors = ["Prashant Malge <prashantmalge181@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.2"
selenium = "^4.21.0"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
click = "^8.1.7"
notebook = "^7.3.2"
chromedriver-autoinstaller = "^0.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
ruff = "^0.2.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"